--- a/public/style.css
+++ b/public/style.css
@@ -12402,6 +12402,11 @@ textarea.form-control-lg {
   padding: 3rem;
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
+.register-container {
+            max-width: 550px;
+            margin-top: 40px;
+            margin-bottom: 40px;
+}
 
 /* Footer with reversed navbar gradient */
 footer.bg-primary {
