--- a/public/style.css
+++ b/public/style.css
@@ -12402,10 +12402,16 @@ textarea.form-control-lg {
   padding: 3rem;
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
+.jumbotron > .card-header {
+  margin: -3rem -3rem 2rem -3rem; /* zieht ihn nach oben & zu den Seiten */
+  background: #0d6efd; /* Beispiel */
+  color: white;
+  font-weight: bold;
+  border-radius: 15px 15px 0 0;
+}
 .register-container {
-            max-width: 550px;
-            margin-top: 40px;
-            margin-bottom: 40px;
+    max-width: 550px;
+    margin: auto;
 }
 
 
